<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".quochoang.ActivityAboutApp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/aboutToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorToolbar"
            android:theme="@style/Widget.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/Base.Theme.AppCompat.Light">

            <Button
                android:id="@+id/backtoSetting"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_back"
                android:onClick="backToSettingButton" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/about"
                android:textColor="@color/textColorPrimary"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="3dp" />

        </android.support.v7.widget.Toolbar>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorToolbar"
            app:layout_constraintTop_toBottomOf="@+id/aboutToolBar"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp">

            <ImageView

                android:id="@+id/imageIconAppWeather"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:foregroundGravity="center"
                android:src="@drawable/app_logo"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="137dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/textNameApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/textColorPrimary"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/imageIconAppWeather"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textVersionApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/version"
                android:textColor="@color/gray"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/textNameApp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textNameGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/group_28"
                android:textColor="@color/gray"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textVersionApp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="99dp" />

        </android.support.constraint.ConstraintLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"

            android:layout_marginTop="16dp"
            android:gravity="clip_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInvite">

            <Button
                android:id="@+id/imageFacebookLogo"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_facebook"
                android:onClick="BrowserFacebook"
                tools:ignore="DuplicateIds,MissingConstraints" />

            <Button
                android:id="@+id/imageMailLogo"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/ic_mail"
                android:onClick="BrowserGoogleMail"
                tools:ignore="DuplicateIds,MissingConstraints" />

            <Button
                android:id="@+id/imageGooglePlusLogo"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/ic_google_plus"
                android:onClick="BrowserGooglePlus"
                tools:ignore="DuplicateIds,MissingConstraints" />

            <Button
                android:id="@+id/imageGitlabLogo"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/ic_gitlab"
                android:onClick="BrowserGitlab"
                tools:ignore="DuplicateIds,MissingConstraints" />

        </LinearLayout>


        <TextView
            android:id="@+id/textViewInvite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/visit_us"
            android:textColor="@color/colorToolbar"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_01"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />


        <TextView
            android:id="@+id/textViewMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/weather_font"
            android:gravity="center"
            android:text="@string/member"
            android:textAlignment="center"
            android:textColor="@color/colorToolbar"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textViewName01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name01"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewMember"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textViewName02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name02"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewName01"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textViewName03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name03"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewName02"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textViewName04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name04"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewName03"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textViewName05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name05"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewName04"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textViewName06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewName04"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textViewName07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/all_right_reserved"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewName06"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>